# Sarah.Server/Controllers/PersonsController.cs
@@ -1,10 +1,10 @@
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
-using Sarah.API.Interfaces.Service;
 using Sarah.API.Interfaces.Services;
 using Sarah.Data.Models;
 using Sarah.Server.Models.Dtos;
 using System.Collections.Generic;
+using System.Linq;
 using System.Threading.Tasks;
 
 namespace Sarah.Server.Controllers
@@ -25,8 +25,47 @@ namespace Sarah.Server.Controllers
         public async Task<ActionResult<IEnumerable<PersonDto>>> GetAllPersons()
         {
             var persons = await _personService.GetAllPersonsAsync();
-            return Ok(persons.Select ( person => person.ToDto()));
+            var personDtos = persons.Select(person => person.ToDto());
+            return Ok(personDtos);
         }
 
+        [HttpGet("{id}")]
+        public async Task<ActionResult<PersonDto>> GetPersonById(int id)
+        {
+            var person = await _personService.GetPersonByIdAsync(id);
+            if (person == null)
+            {
+                return NotFound();
+            }
+            var personDto = person.ToDto();
+            return Ok(personDto);
+        }
+
+        [HttpPost]
+        public async Task<ActionResult> AddPerson(PersonDto personDto)
+        {
+            var person = personDto.ToEntity();
+            await _personService.AddPersonAsync(person);
+            return CreatedAtAction(nameof(GetPersonById), new { id = person.Id }, personDto);
+        }
+
+        [HttpPut("{id}")]
+        public async Task<ActionResult> UpdatePerson(int id, PersonDto personDto)
+        {
+            if (id != personDto.Id)
+            {
+                return BadRequest();
+            }
+            var person = personDto.ToEntity();
+            await _personService.UpdatePersonAsync(person);
+            return NoContent();
+        }
+
+        [HttpDelete("{id}")]
+        public async Task<ActionResult> DeletePerson(int id)
+        {
+            await _personService.DeletePersonAsync(id);
+            return NoContent();
+        }
     }
 }
