# Sarah.Server/Models/Dtos/PersonDto.cs
@@ -4,5 +4,8 @@ namespace Sarah.Server.Models.Dtos
     {
         public long Id { get; set; }
         public string? Name { get; set; }
+        public byte GPSTrackerID { get; set; }
+        public string MobilePhoneHostname { get; set; } = "";
+        public bool IsFavourite { get; set; }
     }
 }
